--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -1,7 +1,7 @@
 # Redis settings  
-redis.host=127.0.0.1  
-redis.port=6379  
-redis.pass=java2000_wl  
+redis.host=192.168.252.128
+redis.port=6399
+#redis.pass=java2000_wl  
   
   
 redis.maxIdle=300  
