--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -14,7 +14,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%d  -%-4r [%t] %-5p %x - %m%n
 error_log
 ############################
 log4j.appender.failLog=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.failLog.File=c:/WebSocket/socket/socket-error.log
+log4j.appender.failLog.File=./log/socket-error.log
 log4j.appender.failLog.layout=org.apache.log4j.PatternLayout
 log4j.appender.failLog.threshold=ERROR
 log4j.appender.failLog.layout.ConversionPattern=%d %p [%c] - %m%n
@@ -25,7 +25,7 @@ log4j.appender.failLog.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.appender.FILE=org.apache.log4j.DailyRollingFileAppender
 #log4j.appender.FILE.Threshold=DEBUG
 log4j.appender.FILE.encoding=UTF-8
-log4j.appender.FILE.File= c:/WebSocket/socket/socket-default.log
+log4j.appender.FILE.File= ./log/socket-default.log
 log4j.appender.FILE.Append=false
 #log4j.appender.FILE.MaxFileSize=1MB
 #log4j.appender.FILE.MaxBackupIndex=10
