--- a/src/main/resources/disconf.properties
+++ b/src/main/resources/disconf.properties
@@ -1,10 +1,10 @@
-disconf.enable.remote.conf=false
+disconf.enable.remote.conf=true
 disconf.conf_server_host=192.168.252.128:8991
 disconf.version=V2
 disconf.app=test
 disconf.env=local
 #\u5FFD\u7565\u54EA\u4E9B\u5206\u5E03\u5F0F\u914D\u7F6E\uFF0C\u7528\u9017\u53F7\u5206\u9694
-disconf.ignore=
+#disconf.ignore=redis.properties
 disconf.debug=false
 disconf.conf_server_url_retry_times=1
 disconf.conf_server_url_retry_sleep_seconds=1
